<resources>
    <string name="app_name">Midi</string>
    <string name="midi_device_image">midi device image</string>
    <string name="midi_device_name">midi device name</string>
    <string name="navigation_drawer_header_content_description">header image</string>
    <string name="navigation_drawer_header_title">Midi Controller</string>
    <string name="navigation_drawer_header_subtitle">Connected devices: %s</string>
    <string name="create_mididevice_header">Create new MidiDevice</string>
    <string name="midi_device_name_placeholder">Device name</string>
    <string name="midi_device_channel_placeholder">Midi channel</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="midi_device_input_for_device_name">Input for device name</string>
    <string name="midi_device_input_for_midi_channel">Input for midi channel</string>
    <string name="devices_empty">No devices</string>
    <string name="midi_device_channel">midi_device_item_midi_channel</string>
    <string name="midi_device_item_channel_prefix">Channel</string>

    <string name="bindings_empty">No midi bindings found</string>
    <string name="settings">Settings</string>
    <string name="midi_device_details_tab_control_changes">Control Changes</string>
    <string name="midi_device_details_tab_program_changes">Program Changes</string>
    <string name="midi_device_details_tab_sysex">SysEx</string>
    <string name="sysex_empty">No SysEx messages found</string>
    <string name="cc_name_placeholder">parameter name</string>
    <string name="update_cc_header">Update ControlChange</string>
    <string name="create_cc_header">Create ControlChange</string>
    <string name="cc_controller_value_placeholder">Controller value</string>
    <string name="cc_controller_number_placeholder">Controller number</string>
    <string name="control_changes_empty">No controlChanges</string>
    <string name="no_bluetooth_devices">No bluetooth devices found</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported on this device</string>
    <string name="why_btle_location">Location permission is needed to scan for Bluetooth LE devices</string>
    <string name="bluetooth_is_required">Bluetooth needs to be enabled to scan for devices</string>
    <string name="open_midi_device_failed">Opening the Midi device failed</string>
    <string name="no_midi_devices">No connected midi devices found</string>
    <string name="available_midi_devices">Available Midi devices</string>
    <string name="program_change_empty">No ProgramChanges found</string>
    <string name="dialog_save">save</string>
    <string name="form_validation_empty">Can\'t be blank</string>
</resources>
