<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="device" type="org.mitchwork.midi.data.MidiDevice" />
        <variable name="clickListener" type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="@{clickListener}"
    >
        <ImageView
                android:id="@+id/midi_device_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_item_image_height"
                android:background="@android:drawable/ic_dialog_info"
                android:layout_gravity="center"
                android:src="@{device.imageUrl}"
                android:contentDescription="@string/midi_device_image"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/spacer"
                android:padding="5dp"
        >
            <TextView
                    android:id="@+id/midi_device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{device.name}"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/list_item_text_size"
                    tools:text="@tools:sample/lorem"
                    android:contentDescription="@string/midi_device_name"/>
            <TextView
                    android:id="@+id/midi_device_channel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/list_item_subtext_size"
                    app:prefix="@{@string/midi_device_item_channel_prefix}"
                    app:value="@{device.midiChannel.toString()}"
                    tools:text="@tools:sample/lorem"
                    android:contentDescription="@string/midi_device_channel"/>
        </LinearLayout>
    </LinearLayout>
</layout>