<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="controlChange"
                type="org.mitchwork.midi.data.ControlChange"
        />
        <variable
                name="saveClickListener"
                type="android.view.View.OnClickListener"
        />
        <variable
                name="cancelClickListener"
                type="android.view.View.OnClickListener"
        />
    </data>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ControlChangeEditFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_view_container">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/cc_name_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:ems="10"
                        android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/controller_number_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cc_controller_number_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_name_layout"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/controller_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/controller_value_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cc_controller_value_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/controller_number_layout"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/controller_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>